// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-tooltip Should NOT update button wrapper when MutationRecord not match disabled condition 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="identifier" disabled="">
    button.disabled
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should NOT update button wrapper when MutationRecord not match disabled condition 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="identifier" disabled="">
    button.disabled
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should NOT update mg-button wrapper when MutationRecord not match disabled condition 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should NOT update mg-button wrapper when MutationRecord not match disabled condition 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should keep displayed tooltip when hover it 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage disconnectedCallback hook 1`] = `
<body>
  <mg-tooltip>
    <template shadowrootmode="open">
      <slot></slot>
      <slot name="content"></slot>
    </template>
    <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
      <mg-button aria-disabled="true" role="button" tabindex="0">
        <template shadowrootmode="open">
          <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
            <div class="mg-c-button__content">
              <slot></slot>
            </div>
          </div>
        </template>
        mg-button.disabled
      </mg-button>
    </div>
    <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
      <template shadowrootmode="open">
        <span class="mg-tooltip-content__message">
          My tooltip message
        </span>
        <slot name="arrow"></slot>
      </template>
      <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
    </mg-tooltip-content>
  </mg-tooltip>
</body>
`;

exports[`mg-tooltip Should manage disconnectedCallback hook 2`] = `<body></body>`;

exports[`mg-tooltip Should manage disconnectedCallback hook without window context 1`] = `
<body>
  <mg-tooltip>
    <template shadowrootmode="open">
      <slot></slot>
      <slot name="content"></slot>
    </template>
    <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
      <mg-button aria-disabled="true" role="button" tabindex="0">
        <template shadowrootmode="open">
          <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
            <div class="mg-c-button__content">
              <slot></slot>
            </div>
          </div>
        </template>
        mg-button.disabled
      </mg-button>
    </div>
    <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
      <template shadowrootmode="open">
        <span class="mg-tooltip-content__message">
          My tooltip message
        </span>
        <slot name="arrow"></slot>
      </template>
      <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
    </mg-tooltip-content>
  </mg-tooltip>
</body>
`;

exports[`mg-tooltip Should manage disconnectedCallback hook without window context 2`] = `<body></body>`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 3`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 4`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 5`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'mouseleave' }, leave with %s element 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'mouseleave' }, leave with %s element 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'mouseleave' }, leave with %s element 3`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'mouseleave' }, leave with %s element 4`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'mouseleave' }, leave with %s element 5`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'clickDocument' }, leave with %s element 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'clickDocument' }, leave with %s element 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'clickDocument' }, leave with %s element 3`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'clickDocument' }, leave with %s element 4`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'clickDocument' }, leave with %s element 5`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 3`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 4`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 5`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should render with element with given placement 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-placement="auto" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="undefined: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should set floating UI strategy to absolute when inside a popover 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  tooltip in popover
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: absolute; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div aria-describedby="identifier" data-floating-arrow role="button" slot="arrow" tabindex="0" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should set floating UI strategy to fixed by default 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  tooltip content
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div aria-describedby="identifier" data-floating-arrow role="button" slot="arrow" tabindex="0" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should toggle tooltip from prop display, case display false 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    batman
  </span>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        batman
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should toggle tooltip from prop display, case display false 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    batman
  </span>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        batman
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should toggle tooltip from prop display, case display true 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    batman
  </span>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        batman
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should toggle tooltip from prop display, case display true 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    batman
  </span>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        batman
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update button wrapper dynamically 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="identifier" disabled="">
    button.disabled
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update button wrapper dynamically 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="identifier" disabled="">
    button.disabled
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update mg-button wrapper dynamically 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update mg-button wrapper dynamically 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-disabled="true" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template><template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div></template>
    mg-button.disabled
  </mg-button>
</mg-tooltip>
`;

exports[`mg-tooltip Should update mg-tooltip-content id when "identifier" is updated 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update mg-tooltip-content id when "identifier" is updated 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="new-identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update wrapper dynamically and keep tooltip displayed with <mg-button disabled-on-click /> 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mgButton.disableOnClick
  </mg-button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update wrapper dynamically and keep tooltip displayed with <mg-button disabled-on-click /> 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" aria-disabled="true" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--disabled mg-c-button--loading mg-c-button--medium mg-c-button--primary">
        <mg-icon>
          <template shadowrootmode="open">
            <svg aria-hidden="true" class="mg-c-icon mg-c-icon--loader mg-c-icon--size-medium mg-c-icon--spin" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
              <path d="M13.657 8A5.657 5.657 0 1 1 2.343 8a5.657 5.657 0 0 1 11.314 0M3.475 8a4.526 4.526 0 1 0 9.05 0 4.526 4.526 0 0 0-9.05 0" fill="currentColor" fill-opacity=".2"></path>
              <path d="M2.343 8A5.657 5.657 0 0 1 8 2.343v1.132A4.525 4.525 0 0 0 3.475 8z" fill="currentColor"></path>
            </svg>
          </template>
        </mg-icon>
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mgButton.disableOnClick
  </mg-button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update wrapper dynamically and keep tooltip displayed with <mg-button disabled-on-click /> 3`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" aria-disabled="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mgButton.disableOnClick
  </mg-button>
  <mg-tooltip-content data-placement="bottom" data-show id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update wrapper dynamically and keep tooltip displayed with <mg-button disabled-on-click /> 4`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" aria-disabled="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mgButton.disableOnClick
  </mg-button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 1`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 2`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 3`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 4`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 5`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 6`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 7`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 8`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 9`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 10`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 11`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 12`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 13`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 14`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 15`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 16`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 17`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier" role="button">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 18`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m-1 9.795-2.5-2.5.795-.795L7 9.205 10.705 5.5l.798.793z" fill="currentColor"></path>
      </svg>
    </template>
  </mg-icon>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 19`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 20`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 21`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 22`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 23`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 24`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 25`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 26`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 27`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 28`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 29`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 30`] = `
<mg-tooltip>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div aria-describedby="identifier" class="mg-c-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <template shadowrootmode="open">
        <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
          <div class="mg-c-button__content">
            <slot></slot>
          </div>
        </div>
      </template>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-placement="bottom" id="identifier" role="tooltip" slot="content" style="position: fixed; top: 0; left: 0;">
    <template shadowrootmode="open">
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="top: -4px; position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;
